feat: Update app name and add member management
Refactors the application name to "DT Smart Client Service APP (道騰百科)" and introduces the Member Management feature. This includes:
- Updating `package.json` and `metadata.json` with the new application name.
- Extending the `types.ts` file to include `MemberProfile` and `AppDataBackup` interfaces.
- Adding initial member data and updating constants in `constants.ts`.
- Enhancing `App.tsx` to incorporate new icons and imports for member management.
- Implementing a new `MemberManageModal.tsx` component for adding, editing, and deleting member profiles.
- Adding new icons related to member management and data backup.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daoteng-wiki-(道騰百科)",
+  "name": "dt-smart-client-service-app-(道騰百科)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
